# AcceleratedKernels.jl

./: .gitignore  LICENSE  Project.toml  README.md
.buildkite/: CI-AMDGPU.yml  CI-CUDA.yml  CI-Metal.yml  CI-oneAPI.yml  pipeline.yml
.github/workflows/: CI-CPU.yml  CI.yml  CompatHelper.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/benchmarks/: index.html
dev/debugging/: index.html
dev/performance/: index.html
dev/references/: index.html
dev/roadmap/: index.html
dev/testing/: index.html
docs/: Project.toml  make.jl  make_local.jl
docs/src/: benchmarks.md  debugging.md  index.md  performance.md  references.md  roadmap.md  (+1 more)
prototype/: Project.toml  accumulate_benchmark.jl  accumulate_test.jl  accumulate_test2.jl  foreachindex_bench.jl  foreachindex_test.jl  map_test.jl  mapreduce_test.jl  merge_sort_by_key_test.jl  merge_sort_test.jl  merge_sortperm2_test.jl  merge_sortperm_test.jl  oversubscribe_test.jl  parallel_cpu_merge.jl  reduce_nd_test.jl  reduce_test.jl  searchsorted_test.jl  sort_benchmark.jl  truth_test.jl
prototype/thrust_sort/: BUC.jl  CMakeLists.txt  buc.cu  buc.hpp
src/: AcceleratedKernels.jl  accumulate.jl  accumulate_old.jl  foreachindex.jl  map.jl  mapreduce.jl  merge_sort.jl  reduce.jl  searchsorted.jl  task_partitioner.jl  truth.jl  utils.jl
t/: Project.toml  reduce_nd_test.jl
test/: Project.toml  runtests.jl
v0.1.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.2.0/: .documenter-siteinfo.json  index.html
v0.2.1/: .documenter-siteinfo.json  index.html
(+86 files in other folders)
